--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -28,6 +28,7 @@
      <string>Game</string>
     </property>
     <addaction name="action_New_game"/>
+    <addaction name="action_High_Scores"/>
     <addaction name="action_Exit"/>
    </widget>
    <addaction name="menuGame"/>
@@ -41,6 +42,11 @@
   <action name="action_Exit">
    <property name="text">
     <string>E&amp;xit</string>
+   </property>
+  </action>
+  <action name="action_High_Scores">
+   <property name="text">
+    <string>&amp;High Scores...</string>
    </property>
   </action>
  </widget>
